2007-07-17  Calvin Gaisford <calvinrg@gmail.com> 

	* test, test/TelepathyTest, test/TelepathyTest/AssemblyInfo.cs,
	  test/TelepathyTest/TelepathyTest.usertasks,
	  test/TelepathyTest/Main.cs,
	  test/TelepathyTest/TelepathyTest.userprefs,
	  test/TelepathyTest/TelepathyTest.mdp, test/StreamObjectTest,
	  test/StreamObjectTest/AssemblyInfo.cs,
	  test/StreamObjectTest/MainWindow.cs,
	  test/StreamObjectTest/StreamObjectTest.mdp,
	  test/StreamObjectTest/VideoWindow.cs,
	  test/StreamObjectTest/gtk-gui,
	  test/StreamObjectTest/gtk-gui/MainWindow.cs,
	  test/StreamObjectTest/gtk-gui/generated.cs,
	  test/StreamObjectTest/gtk-gui/gui.stetic,
	  test/StreamObjectTest/Main.cs, test/StreamObjectTest/ChatWindow.cs,
	  tapioca-sharp, tapioca-sharp/configure.ac.old,
	  tapioca-sharp/tapioca, tapioca-sharp/tapioca/ConnectionGroup.cs,
	  tapioca-sharp/tapioca/TextChannel.cs,
	  tapioca-sharp/tapioca/StreamAudio.cs,
	  tapioca-sharp/tapioca/Avatar.cs,
	  tapioca-sharp/tapioca/ChannelTarget.cs,
	  tapioca-sharp/tapioca/TextChannelMessage.cs,
	  tapioca-sharp/tapioca/StreamVideo.cs,
	  tapioca-sharp/tapioca/StreamObject.cs,
	  tapioca-sharp/tapioca/ConnectionManagerFactory.cs,
	  tapioca-sharp/tapioca/StreamChannel.cs,
	  tapioca-sharp/tapioca/ConfigureDefines.cs.in,
	  tapioca-sharp/tapioca/DBusProxyObject.cs,
	  tapioca-sharp/tapioca/ContactBase.cs,
	  tapioca-sharp/tapioca/ContactList.cs,
	  tapioca-sharp/tapioca/GroupManager.cs,
	  tapioca-sharp/tapioca/ContactListControl.cs,
	  tapioca-sharp/tapioca/ConfigFileReader.cs,
	  tapioca-sharp/tapioca/PrivContactList.cs,
	  tapioca-sharp/tapioca/ConnectionManager.cs,
	  tapioca-sharp/tapioca/UserContact.cs,
	  tapioca-sharp/tapioca/Contact.cs,
	  tapioca-sharp/tapioca/ConnectionManagerParameter.cs,
	  tapioca-sharp/tapioca/Handle.cs,
	  tapioca-sharp/tapioca/Connection.cs,
	  tapioca-sharp/tapioca/AssemblyInfo.cs.in,
	  tapioca-sharp/tapioca/Enum.cs, tapioca-sharp/tapioca/Makefile.am,
	  tapioca-sharp/tapioca/ContactGroup.cs,