@@ -29,7 +29,6 @@
     <File name="./Banter/Conversation.cs" subtype="Code" buildaction="Compile" />
     <File name="./Banter/ChatWindow.cs" subtype="Code" buildaction="Compile" />
     <File name="./Banter/MessagesView.cs" subtype="Code" buildaction="Compile" />
-    <File name="./data/Themes/MessageStyles/Template.html" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./Banter/GConfPreferencesProvider.cs" subtype="Code" buildaction="Compile" />
     <File name="./Banter/Preferences.cs" subtype="Code" buildaction="Compile" />
     <File name="./Banter/PreferencesDialog.cs" subtype="Code" buildaction="Compile" />
@@ -70,12 +69,12 @@
     <File name="./Banter/NotificationManager.cs" subtype="Code" buildaction="Compile" />
     <File name="./Banter/NotificationData.cs" subtype="Code" buildaction="Compile" />
     <File name="./Banter/UriList.cs" subtype="Code" buildaction="Compile" />
+    <File name="./data/Themes/MessageStyles" subtype="Directory" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <ProjectReference type="Gac" localcopy="True" refto="Mono.Posix, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
     <ProjectReference type="Gac" localcopy="True" refto="System.Xml, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-    <ProjectReference type="Assembly" localcopy="True" refto="./external/db4o/6.1/Db4objects.Db4o.dll" />
     <ProjectReference type="Gac" localcopy="True" refto="NDesk.DBus.GLib, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f6716e4f9b2ed099" />
     <ProjectReference type="Gac" localcopy="True" refto="NDesk.DBus, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f6716e4f9b2ed099" />
     <ProjectReference type="Gac" localcopy="True" refto="Gnome.Keyring, Version=0.1.0.0, Culture=neutral, PublicKeyToken=1a73e1bde00c9b66" />
